==> gsshch/ESP8266_NONOS_SDK/app/driver/apds9960.c <==
#include "../include/driver/apds9960.h"
#include "../../app/include/driver/i2c_master.h"
#include "c_types.h"
#include "mem.h"
#include "osapi.h"

int ICACHE_FLASH_ATTR readGesture() {
	uint8_t fifo_level = 0;
	int bytes_read = 0;
	uint8_t fifo_data[64];
	uint8_t fifo_data2[64];
	uint8_t gstatus;
	int motion;
	int i;

	/* Make sure that power and gesture is on and data is valid */
	if (!isGestureAvailable() || !(getMode() & 0b01000001)) {
		return DIR_NONE;
	}

	/* Keep looping as long as gesture data is valid */
	while (1) {

		/* Wait some time to collect next batch of FIFO data */
		__delay_ms(FIFO_PAUSE_TIME);

		/* Get the contents of the STATUS register. Is data still valid? */
		gstatus = wireReadDataByte(APDS9960_GSTATUS);

		/* If we have valid data, read in FIFO */
		if ((gstatus & APDS9960_GVALID) == APDS9960_GVALID) {
			/* Read the current FIFO level */
			fifo_level = wireReadDataByte(APDS9960_GFLVL);

			/* If there's stuff in the FIFO, read it into our data block */
			if (fifo_level > 0) {

				if (fifo_level < 17) {
					bytes_read = wireReadDataBlock( APDS9960_GFIFO_U,
							(uint8_t*) fifo_data, (fifo_level * 4));
				} else {
					bytes_read = wireReadDataBlock( APDS9960_GFIFO_U,
							(uint8_t*) fifo_data2, (fifo_level * 4));
				}

				if (bytes_read == -1) {
					return ERROR;
				}

				/* If at least 1 set of data, sort the data into U/D/L/R */
				if (bytes_read >= 4) {

					for (i = 0; i < bytes_read; i += 4) {
						gesture_data_.u_data[gesture_data_.index] = fifo_data[i
								+ 0];
						gesture_data_.d_data[gesture_data_.index] = fifo_data[i
								+ 1];
						gesture_data_.l_data[gesture_data_.index] = fifo_data[i
								+ 2];
						gesture_data_.r_data[gesture_data_.index] = fifo_data[i
								+ 3];
						gesture_data_.index++;
						gesture_data_.total_gestures++;
					}

					/* Filter and process gesture data. Decode near/far state */
					if (processGestureData()) {

						if (decodeGesture()) {
							//***TODO: U-Turn Gestures
						}
					}

					/* Reset data */
					gesture_data_.index = 0;
					gesture_data_.total_gestures = 0;
				}
			}
		} else {

			/* Determine best guessed gesture and clean up */
			__delay_ms(FIFO_PAUSE_TIME);
			decodeGesture();
			motion = gesture_motion_;

			resetGestureParameters();

			return motion;
		}
	}
}

int ICACHE_FLASH_ATTR wireReadDataBlock(uint8_t reg, uint8_t *val, unsigned int len) {
	unsigned char j = 0;

	i2c.i2c_master_start();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x00); // Slave address + Write command

	i2c.i2c_master_writeByte(reg); // write the location

	for (j = 0; j < len; j++) {

//		I2C_ReStart();
		i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x01); //Slave address+ read command
		val[j] = i2c.i2c_master_readByte(); // Store the Receive value in a variable
		i2c.i2c_master_send_nack();
	}

	i2c.i2c_master_stop();

	return (int) j;
}

int ICACHE_FLASH_ATTR wireWriteDataByte(unsigned char reg, unsigned char val) {

	i2c.i2c_master_start();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x00); // Slave address + Write command
	i2c.i2c_master_writeByte(reg); // write the location
	i2c.i2c_master_writeByte(val); // Write the Data
	i2c.i2c_master_stop();

	return 1;
}

uint8_t ICACHE_FLASH_ATTR wireReadDataByte(unsigned char reg) {
	/* Indicate which register we want to read from */
	unsigned char val;

	i2c.i2c_master_start();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x00); // Slave address + Write command
	i2c.i2c_master_writeByte(reg); // write location
//	I2C_ReStart();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x01); //Slave address+ read command
	val = i2c.i2c_master_readByte();   // Store the Receive value in a variable
	i2c.i2c_master_send_nack();
	i2c.i2c_master_stop();

	return (val);

}
